<resources>
    <string name="app_name">Calculator</string>
    <string name="ac">AC</string>
    <string name="Plus_Minus">+/-</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="calculator">Calculator</string>
    <string name="desh">_</string>
    <string name="dash">_</string>
    <string name="percent">%</string>
    <string name="backspace"><![CDATA[<]]></string>
    <string name="Dot">.</string>
    <string name="pro">pro</string>
    <string name="e">e</string>
    <string name="pi">pi</string>
    <string name="_1_x">1/x</string>
    <string name="x">X!</string>
    <string name="brackets">(</string>
    <string name="rightBrackets">)</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="lg">lg</string>
    <string name="in">in</string>
    <string name="deg">deg</string>
    <string name="_2nd">2nD</string>
    <string name="root">√</string>
    <string name="xy">xY</string>
    <string name="pow">pow</string>
    <string name="ctn">ctn</string>
    <string name="back">back</string>
</resources>