<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/fullCalculationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="88dp"
            android:backgroundTintMode="screen"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="8dp"
            android:text="@string/dash"
            android:textAlignment="textEnd"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/secondButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_2nd"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/degButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="clearClick"
                android:text="@string/deg"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/sinButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="negateNumber"
                android:text="@string/sin"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/cosButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/cos"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/tanButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/tan"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/xYButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="xY"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/lgButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="clearClick"
                android:text="@string/lg"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/inButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="negateNumber"
                android:text="@string/in"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/bracketsButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/brackets"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/brackets2Button"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/rightBrackets"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rootButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/root"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="clearClick"
                android:text="@string/ac"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button10"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="negateNumber"
                android:text="@string/Plus_Minus"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/percentButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/percent"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button14"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="backspace"
                android:text="@string/backspace"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/XButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/x"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_7"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_8"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_9"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button11"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:nestedScrollingEnabled="false"
                android:onClick="buttonClick"
                android:text="@string/mult"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/xFactorButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_1_x"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fourButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_4"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_5"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_6"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button13"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:nestedScrollingEnabled="false"
                android:onClick="buttonClick"
                android:text="@string/div"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/piButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="piClick"
                android:text="@string/pi"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/oneButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_2"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_3"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:nestedScrollingEnabled="false"
                android:onClick="buttonClick"
                android:text="@string/minus"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/proButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="pro"
                android:text="@string/pro"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="pro"
                android:text="@string/e"
                android:textColor="@color/colorPrimary"
                android:textSize="8sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="numberClick"
                android:text="@string/_0"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/dotButton"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:nestedScrollingEnabled="false"
                android:onClick="numberClick"
                android:text="@string/Dot"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button16"
                android:layout_width="64dp"
                android:layout_height="72dp"
                android:layout_marginHorizontal="4dp"
                android:onClick="buttonClick"
                android:text="@string/plus"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/button20"
            android:layout_width="356dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:gravity="center"
            android:onClick="equalsClick"
            android:text="@string/equal"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>


